<resources>
    <string name="appname">QuecSdkDemo</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="please_wait">请稍后</string>
    <string name="operation_record">操作记录</string>
    <string name="clear">清空</string>
    <string name="operation_success">操作成功</string>
    <string name="execution_failed">执行失败：%1$s</string>
    <string name="quec_no_wifi_permission">开启定位权限，可自动获取 Wi-Fi 名称，</string>
    <string name="quec_open_get_wifi_permission">开启权限</string>
    <string name="quec_device_net_config_tip">温馨提示：此设备只支持2.4GHz WI-FI连接使用，请确保设备已进入配网状态</string>
    <string name="quec_device_next_step">下一步</string>
    <string name="quec_reminder">温馨提示</string>
    <string name="quec_cancel">取消</string>
    <string name="quec_sure">确认</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="stop_find">停止发现</string>
    <string name="start_find">开始发现</string>
    <string name="searching">搜索中…</string>
    <string name="not_search">未搜索</string>
    <string name="app_build_time">App编译时间: </string>
    <string name="tab_device">设备</string>
    <string name="tab_features">功能列表</string>
    <string name="tab_mine">我的</string>
    <string name="device_add_title">设备添加</string>
    <string name="device_list_title">设备列表</string>
    <string name="device_control_title">设备控制</string>
    <string name="device_upgrade_title">设备升级</string>
    <string name="device_share_title">设备分享</string>
    <string name="device_share_status">分享状态</string>
    <string name="device_share_control">分享控制</string>
    <string name="device_scene_title">场景列表</string>
    <string name="device_automation_title">自动化列表</string>
    <string name="device_automation_detail_title">自动化详情</string>
    <string name="feature_list_title">功能列表</string>
    <string name="family_list_title">家庭列表</string>
    <string name="room_name_title">房间名</string>
    <string name="nearby_add_title">近场搜索添加设备</string>
    <string name="photo_change_title">点击图片更换头像</string>
    <string name="device_group_title">设备组</string>
    <string name="group_name_label">group name</string>
    <string name="name_label">name</string>
    <string name="mac_label">mac</string>
    <string name="copy_mac">复制mac</string>
    <string name="status_label">状态：</string>
    <string name="version_label">版本号</string>
    <string name="device_name_label">设备名称</string>
    <string name="repair_now">进行修复</string>
    <string name="upgrading_progress_demo">升级中：80%%</string>
    <string name="mine_title">我的</string>
    <string name="home_mode">家居模式</string>
    <string name="nickname">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="address">地址</string>
    <string name="gender">性别</string>
    <string name="language">语言</string>
    <string name="country">国家</string>
    <string name="time_zone">时区</string>
    <string name="change_password">修改密码</string>
    <string name="reset_password_label">重置密码</string>
    <string name="update_user_phone">修改用户手机号码</string>
    <string name="delete_account">注销账号</string>
    <string name="logout">退出登录</string>
    <string name="hint_country_code">请输入国家码 (例如+86)</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="hint_auth_code">请输入authcode</string>
    <string name="hint_new_phone">请输入新手机号</string>
    <string name="hint_old_phone">请输入旧手机号</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_old_password">请输入旧密码</string>
    <string name="hint_group_name">请输入group name</string>
    <string name="hint_pk">请输入pk</string>
    <string name="hint_dk">请输入dk</string>
    <string name="hint_ssid">请输入ssid</string>
    <string name="hint_wifi_password">请输入wifi密码</string>
    <string name="hint_wifi_password_short">请输入密码</string>
    <string name="hint_value">请输入value</string>
    <string name="hint_text_and_date">请输入text和日期毫秒数</string>
    <string name="hint_enum_value">请输入上面显示范围的枚举值</string>
    <string name="hint_update_param">请输入修改参数</string>
    <string name="hint_mac">请输入设备MAC</string>
    <string name="hint_user_domain">输入userDomain</string>
    <string name="hint_user_domain_secret">输入userDomainSecret</string>
    <string name="hint_base_url">输入baseUrl</string>
    <string name="hint_websocket_v2_url">输入websocketV2Url</string>
    <string name="hint_mcc">输入mcc</string>
    <string name="hint_tcp_addr">输入tcpAdrr</string>
    <string name="hint_psk_addr">输入pskAddr</string>
    <string name="hint_tls_addr">输入tlsAddr</string>
    <string name="hint_cer_addr">输入cerAddr</string>
    <string name="phone_login">手机号登录</string>
    <string name="phone_code_login">手机号验证码登录</string>
    <string name="email_login">邮箱登录</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="phone_register">手机号注册</string>
    <string name="email_register">邮箱注册</string>
    <string name="register">注册</string>
    <string name="phone_reset">手机号找回</string>
    <string name="email_reset">邮箱找回</string>
    <string name="set_new_password">设置新密码</string>
    <string name="status_prefix">status:</string>
    <string name="switch_data_center">切换数据中心</string>
    <string name="account_login">账号登录</string>
    <string name="account_login_auth_code">账号登录: 三方AuthCode</string>
    <string name="account_register">账号注册</string>
    <string name="retrieve_password">找回密码</string>
    <string name="current_data_center">当前数据中心: %1$s</string>
    <string name="unknown_data_center">未知[%1$d]</string>
    <string name="data_center_select_title">请选择数据中心</string>
    <string name="custom_data_center_title">请输入数据中心</string>
    <string name="region_china">中国</string>
    <string name="region_europe">欧洲</string>
    <string name="region_north_america">北美</string>
    <string name="control_mode">控制方式</string>
    <string name="channel_auto">auto</string>
    <string name="channel_ws">ws</string>
    <string name="channel_wifi">wifi</string>
    <string name="channel_ble">ble</string>
    <string name="modify_device_group_name">修改设备组名称</string>
    <string name="add_device_group">添加设备组</string>
    <string name="accept_other_group_share">接受其他组的分享</string>
    <string name="add_device_to_group_title">添加设备到设备组</string>
    <string name="query_device_group_detail">查询设备组详情</string>
    <string name="modify_device_group">修改设备组</string>
    <string name="query_device_list_in_group">查询设备组中的设备列表</string>
    <string name="remove_device_in_group">移除设备组中的设备</string>
    <string name="delete_device_group">删除设备组</string>
    <string name="set_group_share_info">分享人设置设备组分享信息</string>
    <string name="query_group_shared_users">分享人查询设备组的被分享人列表</string>
    <string name="modify_shared_group_name">被分享人修改分享的设备组名称</string>
    <string name="recipient_cancel_group_share">被分享人取消设备组分享</string>
    <string name="sharer_cancel_group_share">分享人取消设备组分享</string>
    <string name="stop_scan">停止扫描</string>
    <string name="input_device_mac">请输入设备mac</string>
    <string name="network_connecting">网络连接中…</string>
    <string name="start_network_config">开始配网</string>
    <string name="select_device_wifi_and_password">选择设备工作WIFI并输入密码</string>
    <string name="default_wifi_name">QUEC_WIFI_TEST</string>
    <string name="wifi_config_title">wifi配网</string>
    <string name="send_command_title">下发指令</string>
    <string name="step_label">步长step</string>
    <string name="date_text_title">写date和文本Text</string>
    <string name="date_input_millis_hint">日期请输入时间毫秒数</string>
    <string name="text_length_label">文本长度</string>
    <string name="enum_title">写枚举值</string>
    <string name="struct_title">下发结构体或基本类型数组</string>
    <string name="struct_label">结构体:</string>
    <string name="array_label">Array:</string>
    <string name="array_nested_struct_label">Array嵌套结构体STRUCT:</string>
    <string name="user_domain_label">userDomain：</string>
    <string name="user_domain_secret_label">userDomainSecret：</string>
    <string name="base_url_label">baseUrl：</string>
    <string name="websocket_v2_url_label">websocketV2Url：</string>
    <string name="mcc_label">mcc：</string>
    <string name="tcp_addr_label">tcpAddr：</string>
    <string name="psk_addr_label">pskAddr：</string>
    <string name="tls_addr_label">tlsAddr：</string>
    <string name="cer_addr_label">cerAddr：</string>
    <string name="read_cloud_config_file">读取/Download/cloud_config.jpg文件</string>
    <string name="cloud_config_tip">cloud_config.jpg文件内容为json文本，后缀是jpg是为了兼容Android13及以上访问文件权限</string>
    <string name="update_gender_title">修改性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="update_param_title">修改参数</string>
    <string name="please_input_country_code">请输入国家区号</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_input_auth_code">请输入authCode</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败: %1$s</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败: %1$s</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="reset_password_failed">重置密码失败: %1$s</string>
    <string name="device_info_empty">设备信息为空</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="shared_device_suffix"> - 分享设备</string>
    <string name="no_data">无数据</string>
    <string name="own_group">自己分组</string>
    <string name="received_group">接受别人的分组</string>
    <string name="network_config_success">配网成功</string>
    <string name="network_config_failed">配网失败</string>
    <string name="binding_in_progress">绑定中…</string>
    <string name="ota_version_prefix">版本：</string>
    <string name="ota_desc_prefix">描述：</string>
    <string name="ota_status_upgrading">状态：升级中 进度：</string>
    <string name="ota_status_success">状态：升级成功</string>
    <string name="ota_status_failed">状态：升级失败</string>
    <string name="ota_status_failed_retry">状态：升级失败，请重试</string>
    <string name="ota_status_pending">状态：未升级，请确认升级</string>
    <string name="model_type_prefix">类型:</string>
    <string name="model_rw_type_prefix"> 读写类型:</string>
    <string name="sn_bind_device">SN绑定设备</string>
    <string name="receive_device_share">接收设备分享</string>
    <string name="hint_product_key">请输入productKey</string>
    <string name="hint_sn">请输入Sn</string>
    <string name="hint_share_code">请输入shareCode</string>
    <string name="sn_bind_success">SN绑定设备成功</string>
    <string name="accept_device_share">接受设备分享</string>
    <string name="accept_share_success">接受分享成功</string>
    <string name="ble_only_bind">仅蓝牙激活绑定</string>
    <string name="ble_prefer_bind">优先蓝牙激活绑定</string>
    <string name="wifi_prefer_bind">优先WiFi配网激活绑定</string>
    <string name="hint_device_wifi_optional">请输入设备WiFi信息(可为空)</string>
    <string name="hint_device_wifi_required">请输入设备WiFi信息(为空添加会失败)</string>
    <string name="router_name">路由器名称</string>
    <string name="password_label">密码</string>
    <string name="add_success">添加成功</string>
    <string name="add_failed">添加失败: %1$s</string>
    <string name="hint_device_wifi">请输入设备WiFi信息</string>
    <string name="hint_wifi_name">请输入WiFi名称</string>
    <string name="please_grant_bluetooth_permission">请先授予应用的 蓝牙权限</string>
    <string name="get_device_info">获取设备信息</string>
    <string name="device_info">设备信息</string>
    <string name="rename_device">修改设备名</string>
    <string name="hint_device_name">请输入设备名</string>
    <string name="device_control">设备控制</string>
    <string name="device_upgrade">设备升级</string>
</resources>