<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.account.LoginExActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_country"
        style="@style/CommEdit"
        android:layout_marginTop="70dp"
        android:hint="@string/hint_country_code" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_account"
        style="@style/CommEdit"
        android:hint="@string/hint_phone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_code"
        style="@style/CommEdit"
        android:hint="@string/hint_verification_code"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_pwd"
        style="@style/CommEdit"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:visibility="gone"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/rg_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/rb_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_reset" />

        <RadioButton
            android:id="@+id/rb_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_reset" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_get_code"
        style="@style/CommButton"
        android:text="@string/get_verification_code" />

    <Button
        android:id="@+id/bt_confirm"
        style="@style/CommButton"
        android:text="@string/set_new_password"
        android:visibility="gone"
        tools:visibility="visible" />
</LinearLayout>