<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/quec_smart_config_button_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/P4"
            android:layout_marginBottom="@dimen/P1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/custom_data_center_title"
                android:textColor="@color/W1"
                android:textSize="@dimen/T7_F"
                android:textStyle="bold" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/M6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/P5"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUserDomain"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/user_domain_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtUserDomain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_domain" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUserDomainSecret"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/user_domain_secret_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtUserDomainSecret"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_domain_secret" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBaseUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/base_url_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtBaseUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_base_url" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWebsocketV2Url"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/websocket_v2_url_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtWebsocketV2Url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_websocket_v2_url" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMcc"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/mcc_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtMcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mcc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTcpAddr"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/tcp_addr_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtTcpAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_tcp_addr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPskAddr"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/psk_addr_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtPskAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_psk_addr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTlsAddr"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/tls_addr_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtTlsAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_tls_addr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCerAddr"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/cer_addr_label"
                    android:textColor="@color/new_lan" />

                <EditText
                    android:id="@+id/edtCerAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cer_addr" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnReadJson"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/P4"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/P4"
            android:layout_marginBottom="@dimen/P6"
            android:background="@drawable/quec_basic_ui_login_button_background"
            android:enabled="true"
            android:text="@string/read_cloud_config_file"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/T4_F" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/P4"
            android:layout_marginRight="@dimen/P4"
            android:textSize="@dimen/dp_12"
            android:text="@string/cloud_config_tip"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_40"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/P4"
                android:layout_marginRight="@dimen/P4"
                android:background="@drawable/quec_basic_ui_button_background_default"
                android:enabled="true"
                android:paddingHorizontal="@dimen/dp_40"
                android:text="@string/cancel"
                android:textColor="@color/main2"
                android:textSize="@dimen/T4_F" />

            <Button
                android:id="@+id/btnSure"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/P4"
                android:layout_marginRight="@dimen/P4"
                android:background="@drawable/quec_basic_ui_login_button_background"
                android:enabled="true"
                android:paddingHorizontal="@dimen/dp_40"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/T4_F" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>