<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="@dimen/dp_16"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/quec_basic_ui_free_dialog_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/P5"
            android:layout_marginTop="@dimen/dp_28"
            android:layout_marginEnd="@dimen/P5"
            android:layout_marginBottom="-16dp"
            android:gravity="center"
            android:text="@string/quec_reminder"
            android:textColor="@color/W1"
            android:textSize="@dimen/T7_F"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/P5"
            android:layout_marginTop="@dimen/dp_28"
            android:layout_marginRight="@dimen/P5"
            android:gravity="center"
            android:maxHeight="300dp"
            android:textColor="@color/W2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/dp_28"
            android:background="@color/W6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:lines="1"
                android:text="@string/quec_cancel"
                android:textColor="@color/W1"
                android:textSize="@dimen/T6_F"
                android:textStyle="bold" />

            <View
                android:id="@+id/viewLine"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/W6" />

            <TextView
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:lines="1"
                android:text="@string/quec_sure"
                android:textColor="@color/M0"
                android:textSize="@dimen/T6_F"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>